LCPM mono decoding regression
It justs buzz: http://streams.videolan.org/issues/8982/criterionBD-sample.m2ts
Works fine in 2.0.x
main debug: processing request item: criterionBD-sample.m2ts, node: Liste de lecture, skip: 0
main debug: resyncing on criterionBD-sample.m2ts
main debug: criterionBD-sample.m2ts is at 0
main debug: starting playback of the new playlist item
main debug: resyncing on criterionBD-sample.m2ts
main debug: criterionBD-sample.m2ts is at 0
main debug: creating new input thread
main debug: Creating an input for 'criterionBD-sample.m2ts'
main debug: using timeshift granularity of 50 MiB, in path 'C:\Users\jb\AppData\Local\Temp'
main debug: `file:///C:/Users/jb/Desktop/criterionBD-sample.m2ts' gives access `file' demux `' path `/C:/Users/jb/Desktop/criterionBD-sample.m2ts'
main debug: creating demux: access='file' demux='' location='/C:/Users/jb/Desktop/criterionBD-sample.m2ts' file='C:\Users\jb\Desktop\criterionBD-sample.m2ts'
main debug: looking for access_demux module matching "file": 12 candidates
main debug: no access_demux modules matched
main debug: creating access 'file' location='/C:/Users/jb/Desktop/criterionBD-sample.m2ts', path='C:\Users\jb\Desktop\criterionBD-sample.m2ts'
main debug: looking for access module matching "file": 20 candidates
filesystem debug: opening file `C:\Users\jb\Desktop\criterionBD-sample.m2ts'
main debug: using access module "filesystem"
main debug: Using stream method for AStream*
main debug: starting pre-buffering
main debug: received first data after 0 ms
main debug: pre-buffering done 1024 bytes in 0s - 1000000 KiB/s
main debug: looking for stream_filter module matching "any": 6 candidates
main debug: no stream_filter modules matched
main debug: looking for stream_filter module matching "stream_filter_record": 6 candidates
main debug: no stream_filter modules matched
main debug: creating demux: access='file' demux='' location='/C:/Users/jb/Desktop/criterionBD-sample.m2ts' file='C:\Users\jb\Desktop\criterionBD-sample.m2ts'
main debug: looking for demux module matching "any": 63 candidates
mod debug: MOD validation failed (ext=m2ts)
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
qt4 debug: IM: Setting an input
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts debug: pid[256] unknown
ts debug: pid[31] unknown
ts debug: pid[4097] unknown
ts debug: pid[4352] unknown
ts debug: pid[4113] unknown
ts debug: PATCallBack called
ts debug: new PAT ts_id=1 version=0 current_next=1
ts debug: * number=0 pid=31
ts debug: * number=1 pid=256
ts debug: PMTCallBack called
ts debug: new PMT program number=1 version=0 pid_pcr=4097
ts debug: * descriptor : registration HDMV
ts debug: * descriptor : unknown (0x88)
ts debug: * es pid=4113 type=27 dr->i_tag=0x28
ts debug: * es pid=4113 type=27 fcc=h264
main debug: selecting program id=1
ts debug: * es pid=4352 type=128 dr->i_tag=0x5
ts debug: * es pid=4352 type=128 dr->i_tag=0xa
ts debug: found language: fra
ts debug: * es pid=4352 type=128 fcc=bpcm
ts debug: * es pid=4608 type=144 dr->i_tag=0xa
ts debug: found language: eng
ts debug: * es pid=4608 type=144 fcc=bdpg
filesystem warning: unimplemented query 4097 in control
main debug: using demux module "ts"
main debug: looking for a subtitle file in C:\Users\jb\Desktop\
main debug: looking for decoder module matching "any": 38 candidates
avcodec debug: trying to use direct rendering
avcodec debug: allowing 4 thread(s) for decoding
avcodec debug: avcodec codec (H264 - MPEG-4 AVC (part 10)) started
avcodec debug: using frame thread mode with 4 threads
main debug: using decoder module "avcodec"
main debug: looking for packetizer module matching "any": 21 candidates
main debug: using packetizer module "packetizer_h264"
main debug: looking for decoder module matching "any": 38 candidates
main debug: using decoder module "lpcm"
ts debug: DEMUX_SET_GROUP 0 00000000
main debug: looking for meta reader module matching "any": 2 candidates
lua debug: Trying Lua scripts in C:\Users\jb\AppData\Roaming\vlc\lua\meta\reader
lua debug: Trying Lua scripts in C:\Program Files (x86)\VideoLAN\VLC\lua\meta\reader
lua debug: Trying Lua playlist script C:\Program Files (x86)\VideoLAN\VLC\lua\meta\reader\filename.luac
main debug: no meta reader modules matched
main debug: `file:///C:/Users/jb/Desktop/criterionBD-sample.m2ts' successfully opened
ts warning: first packet for pid=4352 cc=0x9
main debug: reusing audio output
ts warning: first packet for pid=4113 cc=0x9
directsound debug: Opening DirectSound Audio Output
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
main debug: Buffering 0%
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
main debug: Buffering 30%
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
main debug: Buffering 59%
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
main debug: Buffering 90%
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
main debug: Stream buffering done (360 ms in 7 ms)
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
directsound debug: Windows speaker config: 5.1
directsound debug: couldn't use hardware sound buffer
directsound debug: channel reordering needed
main debug: output 'f32l' 48000 Hz 3F2R/LFE frame=1 samples/24 bytes
main debug: looking for audio volume module matching "any": 2 candidates
main debug: using audio volume module "float_mixer"
main debug: input 's32l' 48000 Hz Mono frame=1 samples/4 bytes
main debug: looking for audio filter module matching "scaletempo": 14 candidates
scaletempo debug: format: 48000 rate, 1 nch, 4 bps, fl32
scaletempo debug: params: 30 stride, 0.200 overlap, 14 search
scaletempo debug: 1.000 scale, 1440.000 stride_in, 1440 stride_out, 1152 standing, 288 overlap, 672 search, 2400 queue, fl32 mode
main debug: using audio filter module "scaletempo"
main debug: conversion: 's32l'->'f32l' 48000 Hz->48000 Hz Mono->Mono
main debug: looking for audio converter module matching "any": 12 candidates
audio_format debug: s32l->f32l, bits per sample: 32->32
main debug: using audio converter module "audio_format"
main debug: conversion pipeline complete
main debug: conversion: 'f32l'->'f32l' 48000 Hz->48000 Hz Mono->3F2R/LFE
main debug: looking for audio converter module matching "any": 12 candidates
main debug: using audio converter module "trivial_channel_mixer"
main debug: conversion pipeline complete
main debug: looking for audio resampler module matching "any": 3 candidates
main debug: using audio resampler module "samplerate"
main debug: End of audio preroll
main debug: Decoder buffering done in 11 ms
main debug: inserting 20400 zeroes
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 warning: waiting for SPS/PPS
packetizer_h264 debug: found NAL_SPS (sps_id=0)
packetizer_h264 debug: found NAL_PPS (pps_id=0 sps_id=0)
packetizer_h264 debug: Seen SEI recovery point, 0 recovery frames
packetizer_h264 debug: Recovery from SEI recovery point complete
main debug: looking for text renderer module matching "any": 2 candidates
freetype debug: Using Arial as font from file C:\Windows\Fonts\ariali.ttf
freetype debug: using fontsize: 2
main debug: using text renderer module "freetype"
main debug: looking for video filter2 module matching "any": 55 candidates
swscale debug: 32x32 chroma: YUVA -> 16x16 chroma: RGBA with scaling using Bicubic (good quality)
main debug: using video filter2 module "swscale"
main debug: looking for video filter2 module matching "any": 55 candidates
yuvp debug: YUVP to YUVA converter
main debug: using video filter2 module "yuvp"
main debug: Deinterlacing available
main debug: deinterlace 0, mode blend, is_needed 0
main debug: Opening vout display wrapper
main debug: looking for vout display module matching "any": 10 candidates
direct3d debug: creating Vout EventThread
direct3d debug: DirectXCreateWindow
main debug: looking for vout window hwnd module matching "qt4,any": 3 candidates
qt4 debug: requesting video window...
qt4 debug: Video was requested 0, 0
main debug: using vout window hwnd module "qt4"
direct3d debug: created video sub-window
direct3d debug: Vout EventThread running
direct3d debug: disabling screen saver
direct3d debug: Direct3d Device: AMD Radeon HD 6800 Series 4098 26424 0
main debug: VoutDisplayEvent 'resize' 1936x1119 window
direct3d warning: trying surface pixel format: YV12
direct3d debug: selected surface pixel format is YV12
direct3d debug: Using D3DTEXF_LINEAR for minification
direct3d debug: Using D3DTEXF_LINEAR for magnification
direct3d debug: Direct3D scene created successfully
direct3d debug: Direct3D device adapter successfully initialized
main debug: using vout display module "direct3d"
main debug: original format sz 1920x1080, of (0,0), vsz 1920x1080, 4cc I420, sar 1:1, msk r0x0 g0x0 b0x0
main debug: removing module "freetype"
main debug: VoutDisplayEvent 'resize' 1920x988 window
main debug: looking for text renderer module matching "any": 2 candidates
freetype debug: Using Arial as font from file C:\Windows\Fonts\ariali.ttf
freetype debug: using fontsize: 2
main debug: using text renderer module "freetype"
avcodec debug: using direct rendering
main debug: End of video preroll
direct3d debug: Created 738x71 texture for OSD
main warning: picture is too late to be displayed (missing 710 ms)
main debug: picture might be displayed late (missing 4 ms)
main debug: auto hiding mouse cursor
ts warning: first packet for pid=4608 cc=0x1
ts debug: eof ?
main debug: EOF reached
It fails for me in Waveout and DirectSound.
Edited by Jean-Baptiste Kempf