lpcm: fix BD decoding broken by 45c7b7c8764

We now output 20 and 24 bits PCM into S32N
Don't use swab, as it is forbidden for an odd number of channels

Fixes: #8982